# madara-bootstrapper

./: .dockerignore  .env.example  .eslintignore  .gitignore  .gitmodules  .makefile-env  .makefileenv  Cargo.toml  Dockerfile  Makefile  Readme.md  bootstrap.json  compile_contracts.sh  docker-compose-local.yml  docker-compose.yml  eth_event.sh  rust-toolchain.toml  sepolia.md  tarpaulin-report.html  toggle_fees.sh
.github/workflows/: linters-cargo.yml  linters.yml  pull-request.yml  rust-build.yml  test-bridge.yml
artifacts/: erc20.casm.json  erc20.sierra.json  token_bridge.casm.json  token_bridge.sierra.json  token_bridge_eic.casm.json  token_bridge_eic.sierra.json
build-artifacts/: Dockerfile
docs/: sepolia.md
lib/starkgate-contracts-old/starkgate-artifacts/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/starkgate-contracts-old/starkgate-artifacts/cmake_utils/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gen_solidity_exe
lib/starkgate-contracts-old/starkgate-artifacts/cmake_utils/gen_solidity_venv/: pyvenv.cfg
lib/starkgate-contracts-old/starkgate-artifacts/starkware/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/starkgate-contracts-old/starkgate-artifacts/starkware/cairo/eth/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/starkgate-contracts-old/starkgate-artifacts/starkware/solidity/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/starkgate-contracts-old/starkgate-artifacts/starkware/solidity/components/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/starkgate-contracts-old/starkgate-artifacts/starkware/solidity/interfaces/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/starkgate-contracts-old/starkgate-artifacts/starkware/solidity/libraries/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/starkgate-contracts-old/starkgate-artifacts/starkware/solidity/test_contracts/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/starkgate-contracts-old/starkgate-artifacts/starkware/solidity/test_contracts/test_erc20_sol_env/artifacts/: combined.json
lib/starkgate-contracts-old/starkgate-artifacts/starkware/solidity/tokens/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/starkgate-contracts-old/starkgate-artifacts/starkware/solidity/upgrade/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/starkgate-contracts-old/starkgate-artifacts/starkware/solidity/upgrade/proxy_contract_sol_env/artifacts/: GenericGovernance.json  GovernanceStorage.json  IFactRegistry.json  IQueryableFactRegistry.json  MOperator.json  ProxyGovernance.json  ProxyStorage.json  StorageSlots.json  combined.json
lib/starkgate-contracts-old/starkgate-artifacts/starkware/starknet/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/starkgate-contracts-old/starkgate-artifacts/starkware/starknet/apps/starkgate/: CTestTestfile.cmake  Makefile  cmake_install.cmake  copy_starkgate_artifacts  starkgate_flow_test
lib/starkgate-contracts-old/starkgate-artifacts/starkware/starknet/compiler/: CTestTestfile.cmake  Makefile  cmake_install.cmake  starknet_compile_exe
lib/starkgate-contracts-old/starkgate-artifacts/starkware/starknet/solidity/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/starkgate-contracts-old/starkgate-artifacts/starkware/starknet/std_contracts/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/starkgate-contracts-old/starkgate-artifacts/starkware/starknet/std_contracts/ERC20/: CTestTestfile.cmake  Makefile  cairo_erc20_test  cmake_install.cmake  compile_erc20_contract_compile_dependencies.cmake
lib/starkgate-contracts-old/starkgate-artifacts/starkware/starknet/std_contracts/upgradability_proxy/: CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_governance_contract_compile_dependencies.cmake  compile_impl_contract_a_compile_dependencies.cmake  compile_impl_contract_b_compile_dependencies.cmake  compile_proxy_contract_compile_dependencies.cmake  compile_test_eic_compile_dependencies.cmake  starknet_upgradability_proxy_test  test_eic.json
src/: main.rs
src/artifacts/: madara.artifact.scale  madara_metadata.rs
src/bridge/: deploy_erc20_bridge.rs  deploy_eth_bridge.rs  mod.rs
src/bridge/contract_clients/: config.rs  eth_bridge.rs  mod.rs  starknet_sovereign.rs  token_bridge.rs
src/bridge/helpers/: account_actions.rs  deploy_utils.rs  eth_bridge.rs  mod.rs  token_bridge.rs
src/bridge_deploy_utils/: lib.rs
src/bridge_deploy_utils/lib/: constants.rs  fixtures.rs  utils.rs
src/configs/: devnet.json
src/contract_clients/: config.rs  core_contract.rs  eth_bridge.rs  init_state.rs  legacy_class.rs  mod.rs  starknet_sovereign.rs  starknet_validity.rs  subxt_funcs.rs  token_bridge.rs  utils.rs
src/contracts/: ArgentAccount.casm.json  ArgentAccount.sierra.json  BraavosAccount.casm.json  BraavosAccount.sierra.json  BraavosBaseAccount.casm.json  BraavosBaseAccount.sierra.json  OpenZeppelinAccount.json  OpenZeppelinAccountCairoOne.casm.json  OpenZeppelinAccountCairoOne.sierra.json  erc20.casm.json  erc20.json  erc20.sierra.json  program.json  program_OpenZeppelinAccount.json  program_proxy.json  proxy_legacy.json  token_bridge.casm.json
src/felt/: lib.rs
src/helpers/: account_actions.rs
src/messages/: lib.rs
src/messages/lib/: conversions.rs
src/non_bridge/: deployer.rs
src/setup_scripts/: account_setup.rs  argent.rs  braavos.rs  core_contract.rs  erc20_bridge.rs  eth_bridge.rs  mod.rs  udc.rs  upgrade_eth_token.rs  upgrade_l1_bridge.rs  upgrade_l2_bridge.rs
src/snos/: lib.rs
src/snos/lib/: codec.rs  tests.rs
src/tests/: constants.rs  devnet.yml  erc20_bridge.rs  eth_bridge.rs  helpers.rs  madara.rs  mod.rs
src/upgrade-artifacts/: eic_eth_bridge.sierra.json  eic_eth_token.casm.json  eic_eth_token.sierra.json  new_eth_bridge.sierra.json  new_eth_token.sierra.json
src/utils/: arg_config.rs  banner.rs  constants.rs  deploy_erc20_bridge.rs  deploy_eth_bridge.rs  deploy_utils.rs  eth_bridge.rs  mapper.rs  mod.rs  token_bridge.rs  utils.rs
taplo/: taplo.toml
ts-helpers/: deployer.js  index.js  index.ts  package.json  pnpm-lock.yaml
(+52 files in other folders)
