[package]
name = "karnot-bridge-deploy"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-vm = { git = "https://github.com/keep-starknet-strange/cairo-rs", branch = "no_std-support-21eff70", default-features = false, features = [
  "std",
  "cairo-1-hints",
  "parity-scale-codec",
] }
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "f0e5b194f09c533feb10d1a686ddb9e5946ec107" }
serde = { version = "1.0.192", default-features = false, features = ["std"] }
serde_json = { version = "1.0.108", default-features = false, features = [
  "std",
] }
serde_with = { version = "2.3.3", default-features = false }
thiserror-no-std = "2.0.2"
hex = { version = "0.4.3", default-features = false, features = ["std"] }
anyhow = "1.0.80"
reqwest = { version = "0.11.22", default-features = false }
url = "2.4.1"

# Substrate primitives dependencies
sp-core = { git = "https://github.com/massalabs/polkadot-sdk", branch = "release-polkadot-v1.3.0-std", default-features = false, features = [
  "std",
] }

# Zaun Deps
ethereum-instance = { git = "https://github.com/karnotxyz/zaun", package = "ethereum-instance", branch = "starkgate" }
starkgate-manager-client = { git = "https://github.com/karnotxyz/zaun", package = "starkgate-manager-client", branch = "starkgate" }
starkgate-registry-client = { git = "https://github.com/karnotxyz/zaun", package = "starkgate-registry-client", branch = "starkgate" }
starknet-core-contract-client = { git = "https://github.com/karnotxyz/zaun", package = "starknet-core-contract-client", branch = "starkgate" }
starknet-erc20-client = { git = "https://github.com/karnotxyz/zaun", package = "starknet-erc20-client", branch = "starkgate" }
starknet-eth-bridge-client = { git = "https://github.com/karnotxyz/zaun", package = "starknet-eth-bridge-client", branch = "starkgate" }
starknet-proxy-client = { git = "https://github.com/karnotxyz/zaun", package = "starknet-proxy-client", branch = "starkgate" }
starknet-token-bridge-client = { git = "https://github.com/karnotxyz/zaun", package = "starknet-token-bridge-client", branch = "starkgate" }
zaun-utils = { git = "https://github.com/karnotxyz/zaun", package = "utils", branch = "starkgate" }

# Starknet Deps
starknet-ff = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "64ebc36", default-features = false, features = [
  "std",
] }
starknet-core = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "64ebc36", default-features = false, features = [
  "std",
] }
starknet_api = { git = "https://github.com/keep-starknet-strange/starknet-api", branch = "no_std-support-dc83f05", features = [
  "std",
  "testing",
  "parity-scale-codec",
], default-features = false }
starknet-accounts = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "64ebc36", default-features = false }
starknet-providers = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "64ebc36", default-features = false }
starknet-signers = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "64ebc36", default-features = false }
starknet-contract = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "64ebc36", default-features = false }

# Third Party
scale-info = { version = "2.10.0", default-features = false, features = [
  "std",
] }
parity-scale-codec = { version = "3.2.2", default-features = false, features = [
  "std",
] }
async-lock = "3.1.0"
rstest = "0.18.1"
thiserror = "1.0.50"
assert_matches = "1.5.0"
async-trait = "0.1.74"
tokio = {version = "1.36.0",  features = ["macros", "rt-multi-thread"]}
log = "0.4.21"
clap = { version = "4.4.11", features = ["derive", "env"] }
env_logger = "0.11.3"
dotenv = "0.15.0"
