[package]
name = "karnot-bridge-deploy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "f0e5b194f09c533feb10d1a686ddb9e5946ec107" }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
reqwest = { version = "0.11.22", default-features = false }
serde = { version = "1.0.192", default-features = false, features = ["std"] }
serde_json = { version = "1.0.108", default-features = false, features = [
  "std",
] }
serde_with = { version = "2.3.3", default-features = false }
url = "2.4.1"

# Zaun Deps
ethereum-instance = { git = "https://github.com/keep-starknet-strange/zaun", package = "ethereum-instance", branch = "main" }
starkgate-manager-client = { git = "https://github.com/keep-starknet-strange/zaun", package = "starkgate-manager-client", branch = "main" }
starkgate-registry-client = { git = "https://github.com/keep-starknet-strange/zaun", package = "starkgate-registry-client", branch = "main" }
starknet-core-contract-client = { git = "https://github.com/keep-starknet-strange/zaun", package = "starknet-core-contract-client", branch = "main" }
starknet-erc20-client = { git = "https://github.com/keep-starknet-strange/zaun", package = "starknet-erc20-client", branch = "main" }
starknet-eth-bridge-client = { git = "https://github.com/keep-starknet-strange/zaun", package = "starknet-eth-bridge-client", branch = "main" }
starknet-proxy-client = { git = "https://github.com/keep-starknet-strange/zaun", package = "starknet-proxy-client", branch = "main" }
starknet-token-bridge-client = { git = "https://github.com/keep-starknet-strange/zaun", package = "starknet-token-bridge-client", branch = "main" }
zaun-utils = { git = "https://github.com/keep-starknet-strange/zaun", package = "utils", branch = "main" }

# Starknet Deps
#starknet-accounts = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "2d59636911628260fa460179010bbd00e89de06e" }
#starknet-core = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "2d59636911628260fa460179010bbd00e89de06e" }
#starknet-crypto = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "2d59636911628260fa460179010bbd00e89de06e" }
starknet-ff = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "2d59636911628260fa460179010bbd00e89de06e" }
#starknet-providers = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "2d59636911628260fa460179010bbd00e89de06e" }
#starknet-signers = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "2d59636911628260fa460179010bbd00e89de06e" }
starknet_api = { git = "https://github.com/bidzyyys/starknet-api.git", branch = "feature/scale-codec" }

starknet = "0.11.0"
starknet-accounts = "0.11.0"
starknet-core = "0.11"
starknet-crypto = "0.7"
starknet-providers = "0.11"
starknet-signers = "0.9"

starknet-types-core = { version = "0.1.5", default-features = false, features = [
  "hash",
] }

# Third Party
assert_matches = "1.5.0"
async-trait = "0.1.74"
clap = { version = "4.4.11", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
num-bigint = "0.4"
parity-scale-codec = { version = "3.2.2", default-features = false, features = [
  "std",
] }
rstest = "0.18.1"
scale-info = { version = "2.10.0", default-features = false, features = [
  "std",
] }
thiserror = "1.0.50"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }

# Subxt Dependencies
bytes = "1.6.0"
flate2 = "1.0.30"
indexmap = "2.2.6"
inline_colorization = "0.1.6"
subxt-lightclient = { version = "0.35.3", optional = true, default-features = false }
